templates/ohmyform_template.yaml
---
# Source: ohmyform/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-ohmyform
  labels:
    helm.sh/chart: ohmyform-0.0.1
    app.kubernetes.io/name: ohmyform
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.3"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: ohmyform
    app.kubernetes.io/instance: release-name
---
# Source: ohmyform/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-ohmyform
  labels:
    helm.sh/chart: ohmyform-0.0.1
    app.kubernetes.io/name: ohmyform
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.3"
    app.kubernetes.io/managed-by: Helm
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: ohmyform
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ohmyform
        app.kubernetes.io/instance: release-name
    spec:
      
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: release-name-ohmyform
          image: "ohmyform/ohmyform:1.0.3"
          imagePullPolicy: 
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            failureThreshold: 6
            timeoutSeconds: 5
            periodSeconds: 5
          startupProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 250Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: release-name-ohmyform-data
---
# Source: ohmyform/templates/common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-ohmyform
  labels:
    helm.sh/chart: ohmyform-0.0.1
    app.kubernetes.io/name: ohmyform
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.3"
    app.kubernetes.io/managed-by: Helm
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: "ohmyform.localhost"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: release-name-ohmyform
                port:
                  number: 3000
